src/test/deca/context/valid/assign-class.deca
// Description:
//    Instancie un objet après déclaration
//
// Resultats:
//
//
// Historique:
//    cree le 16/01/2023

class A{}

{
    A a;
    a = new A();
}