src/test/deca/context/invalid/instanceof-type-not-class.deca
// Description:
//    instanceof avec un type non class 
//
// Resultats:
//    Ligne 16: instanceof argument has to be a class (rule 3.40)
//
// Historique:
//    cree le 16/01/2023

class A{

}

{
    A a;
    a instanceof int;
}